<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/size_medium">
    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_xlarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/message"
        android:text="@string/shimmer_dialog_connecting"
        style="@style/TextAppearance.MaterialComponents.Headline6" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_medium"
        android:text="@string/shimmer_dialog_message"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/device_status"
        style="@style/TextAppearance.MaterialComponents.Body2" />

    <TextView
        android:id="@+id/device_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/device_status"
        app:layout_constraintBottom_toBottomOf="@id/device_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/device_status"
        style="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        />

    <ImageView
        android:id="@+id/device_status"
        android:layout_width="@dimen/size_large"
        android:layout_height="@dimen/size_large"
        android:contentDescription="@string/shimmer_connection_status"
        android:src="@drawable/status_searching"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:layout_constraintStart_toEndOf="@id/device_status_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        style="@style/TextAppearance.MaterialComponents.Body2"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/size_medium"
        android:layout_marginVertical="@dimen/size_medium"
        android:text="@string/cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@id/device_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/final_action"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/final_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/size_medium"
        app:layout_constraintTop_toBottomOf="@id/device_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel"
        android:text="@string/shimmer_skip_pairing"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
